load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@llvm//toolchain:selects.bzl", "platform_llvm_binary")
load("@llvm//tools:defs.bzl", "TOOLCHAIN_BINARIES")
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//visibility:public"])

[
    alias(
        name = tool,
        actual = platform_llvm_binary(tool),
        tags = ["manual"],
    )
    for tool in TOOLCHAIN_BINARIES
]

py_binary(
    name = "update_osx_sdk",
    srcs = ["update_osx_sdk.py"],
    main = "update_osx_sdk.py",
    python_version = "PY3",
    tags = ["manual"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
)
