load("@bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("//bootstrap:platforms.bzl", "PLATFORMS")
load("//bootstrap/llvm:llvm_release.bzl", "llvm_release")

llvm_release(name = "llvm_release")

[
    platform_transition_filegroup(
        name = "for_" + platform.split(":")[1],
        srcs = [
            ":llvm_release",
        ],
        target_platform = platform,
    )
    for platform in PLATFORMS
]
