load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load(":cxxstdlib_versions.bzl", "CXXSTDLIBS", "DEFAULT_CXXSTDLIB")

package(default_visibility = ["//visibility:public"])

constraint_setting(
    name = "variant",
    default_constraint_value = DEFAULT_CXXSTDLIB,
)

[
    constraint_value(
        name = cxxstdlib,
        constraint_setting = "variant",
    )
    for cxxstdlib in CXXSTDLIBS
]

bzl_library(
    name = "cxxstdlib_versions",
    srcs = ["cxxstdlib_versions.bzl"],
)
