load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load(":declare_libcs_constraints.bzl", "declare_libcs_constraints")

package(default_visibility = ["//visibility:public"])

constraint_setting(
    name = "variant",
    # For linux, platform declarations may map this to an explicit default glibc.
    default_constraint_value = "unconstrained",
)

constraint_value(
    name = "unconstrained",
    constraint_setting = "variant",
)

declare_libcs_constraints()

bzl_library(
    name = "declare_libcs_constraints",
    srcs = ["declare_libcs_constraints.bzl"],
    deps = [":libc_versions"],
)

bzl_library(
    name = "libc_versions",
    srcs = ["libc_versions.bzl"],
)
