load("@bazel_lib//lib:transitions.bzl", "platform_transition_binary")
load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@llvm//constraints/libc:libc_versions.bzl", "LIBCS")
load("@platforms//host:constraints.bzl", "HOST_CONSTRAINTS")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_qemu//qemu:qemu_binary.bzl", "qemu_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

string_flag(
    name = "test_glibc_versions",
    build_setting_default = "all",
    values = [
        "all",
        "none",
    ],
)

config_setting(
    name = "no_test_glibc_versions",
    flag_values = {
        ":test_glibc_versions": "none",
    },
)

cc_library(
    name = "add",
    srcs = ["add.c"],
    hdrs = ["add.h"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "main",
    srcs = ["test.cc"],
    deps = [":add"],
)

cc_binary(
    name = "hello",
    srcs = ["hello.c"],
)

cc_test(
    name = "hello_test",
    srcs = ["hello.c"],
    exec_compatible_with = HOST_CONSTRAINTS,
    # remote-exec tests can't run without forcing the target platform to match
    # the remote exec platform.
    tags = ["no-remote"],
)

platform(
    name = "ubuntu_20_04_amd64",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        "@llvm//constraints/libc:gnu.2.31",
        "@llvm//constraints/kernel/linux:5.4",
    ],
)

cc_binary(
    name = "linux_kernel_version_test",
    srcs = ["linux_kernel_version_test.c"],
    tags = ["manual"],
)

platform_transition_binary(
    name = "linux_kernel_version_5_4_test",
    binary = ":linux_kernel_version_test",
    target_platform = ":ubuntu_20_04_amd64",
)

# TODO(cerisier): should the toolchain provide its own list ?
PLATFORMS = [
    "@llvm//platforms:linux_x86_64",
    "@llvm//platforms:linux_aarch64",
    "@llvm//platforms:linux_riscv64",
    "@llvm//platforms:linux_s390x",
    "@llvm//platforms:macos_x86_64",
    "@llvm//platforms:macos_aarch64",
    "@llvm//platforms:windows_amd64",
    "@llvm//platforms:windows_arm64",
] + [
    "@llvm//platforms:linux_x86_64_{}".format(libc)
    for libc in LIBCS
] + [
    "@llvm//platforms:linux_aarch64_{}".format(libc)
    for libc in LIBCS
] + [
    "@llvm//platforms:linux_s390x_{}".format(libc)
    for libc in LIBCS
] + [
    # RISC-V needs special LIBC treatment because of the kernel-glibc association we do.
    # Builtins requires kernel headers >= 5.10 which we hardcode to be 2.33+
    "@llvm//platforms:linux_riscv64_musl",
]

[
    platform_transition_binary(
        name = "main_" + platform.split(":")[-1],
        binary = ":main",
        target_compatible_with = select({
            ":no_test_glibc_versions": ["@platforms//:incompatible"] if "gnu" in platform else [],
            "//conditions:default": [],
        }),
        target_platform = platform,
    )
    for platform in PLATFORMS
]

QEMU_MUSL_PLATFORMS = {
    "linux_riscv64_musl": "@llvm//platforms:linux_riscv64_musl",
    "linux_s390x_musl": "@llvm//platforms:linux_s390x_musl",
}

[
    qemu_binary(
        name = "hello_" + platform,
        binary = ":hello",
        tags = ["manual"],
        target_platform = target_platform,
    )
    for platform, target_platform in QEMU_MUSL_PLATFORMS.items()
]

[
    sh_test(
        name = "hello_{}_qemu_test".format(platform),
        srcs = ["test_hello_qemu.sh"],
        data = [":hello_{}".format(platform)],
        env = {
            "BINARY": "$(rootpath :hello_{})".format(platform),
            "EXPECTED_OUTPUT": "Hello, World corentin!",
        },
        exec_compatible_with = [
            "@platforms//os:linux",
        ],
        target_compatible_with = [
            "@platforms//os:linux",
        ],
    )
    for platform in QEMU_MUSL_PLATFORMS
]
