bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "llvm", version = "")
local_path_override(
    module_name = "llvm",
    path = "../../",
)

register_toolchains(
    "@llvm//toolchain:all",
)
