bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_qemu", version = "0.1.0")
bazel_dep(name = "llvm", version = "")
local_path_override(
    module_name = "llvm",
    path = "../../",
)

qemu = use_extension("@rules_qemu//qemu/extension:qemu.bzl", "qemu")
use_repo(
    qemu,
    "qemu_user_toolchains",
)

register_toolchains(
    "@llvm//toolchain:all",
    "@qemu_user_toolchains//:all",
)
